package ar.edu.cuvl.utn.progra3.Ejercicio_Kokumo.Clases.Herramientas;

public abstract class Herramienta_accionable {
    public abstract Double getPeso();
    public abstract String tipo_herramienta();
}
